--- a/less/blocks/radio.less
+++ b/less/blocks/radio.less
@@ -7,3 +7,17 @@
   color: #000000;
   text-transform: none;
 }
+
+@media (min-width: @tablet-width) {
+  .radio {
+    order: -1;
+    width: 324px;
+    border-right: 1px solid #dbdbdb;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .radio {
+    width: 480px;
+  }
+}
