--- a/less/blocks/reasons.less
+++ b/less/blocks/reasons.less
@@ -1,30 +1,27 @@
 .reasons {
+  padding-top: 40px;
   text-align: center;
+  background: #ffffff;
 }
 
 .reasons__slogan {
   display: block;
-  margin-top: 40px;
   margin-bottom: 35px;
   font: bold 18px/26px @font-family;
   color: #000000;
 }
 
 .reasons__header {
-  padding-bottom: 50px;
+  padding-bottom: 50px;//не маргин!
   font: normal 14px/26px @font-family;
   color: #333333;
-  background: #81b3d2 url("../img/bg-triangle.svg") no-repeat bottom;
+  background: @blue url("../img/bg-triangle.svg") no-repeat bottom;
   background-size: auto 100%;
 }
 
-.reasons__wrapper {
-  padding: 0 20px 1px;
-  background: #eeeeee;
-}
-
 .reasons__item {
-  padding: 25px 0 0;
+  padding: 40px 25px 25px;
+  background: #eeeeee;
   border-bottom: 1px solid #d6d6d6;
 }
 
@@ -32,26 +29,89 @@
   border-bottom: none;
 }
 
-.reasons__item--real-city,
-.reasons__item--bridge {
-  padding: 35px 20px 270px;
-  color: #ffffff;
+.reasons__item--white {
+  background: @blue;
   border-bottom: none;
-}
-
-.reasons__item--real-city {
-  background: #81b3d2 url("../img/main-city-mobile@1x.jpg") no-repeat bottom;
-}
-
-.reasons__item--bridge {
-  background: #81b3d2 url("../img/main-bridge-mobile@1x.jpg") no-repeat bottom;
 }
 
 .reasons__title {
   margin-bottom: 15px;
   font: bold 18px/26px @font-family;
+  color: #000000;
+}
+
+.reasons__title--white,
+.reasons__description--white {
+  color: white;
+}
+
+.reasons__image {
+  display: block;
+  width: 320px;//потом удалить
+  height: 190px;//потом удалить
 }
 
 .reasons__description {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+}
+
+@media (min-width: @tablet-width) {
+  .reasons__slogan {
+    margin: 0;
+    margin-bottom: 35px;
+    padding: 0 135px;
+    font: bold 21px/26px @font-family;
+    color: #000000;
+  }
+
+  .reasons__header {
+    padding-bottom: 50px;
+    font: normal 14px/26px @font-family;
+    background: none;
+  }
+
+  .reasons__wrapper {
+    display: flex;
+    padding: 0;
+  }
+
+  .reasons__wrapper--reverse {
+    flex-direction: row-reverse;
+  }
+
+  .reasons__item {
+    flex-grow: 1;
+    width: 33.3%;
+    padding: 40px;
+    border-bottom: none;
+  }
+
+  .reasons__title {
+    margin-bottom: 10px;
+    padding: 0 10px;
+    font: bold 21px/26px @font-family;
+  }
+
+  .reasons__description {
+    margin-bottom: 15px;
+  }
+
+  .reasons__image {
+    width: 66.7%;//потом удалить
+    height: 256px;//потом удалить
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .reasons__slogan {
+    padding: 0 350px;
+  }
+
+  .reasons__item {
+    padding: 40px 60px;
+  }
+
+  .reasons__title {
+    padding: 0 60px;
+  }
 }
