--- a/less/var-mix.less
+++ b/less/var-mix.less
@@ -1,5 +1,19 @@
 @font-family: "PT Sans", "Arial", sans-serif;
 
+@blue: #81b3d2;
+
+@blue-hover: #669ec0;
+
+@blue-active: #5496bd;
+
+@gray: #e5e5e5;
+
+@light-gray: #f2f2f2;
+
+@tablet-width: 768px;
+
+@desktop-width: 1200px;
+
 .pseudo-element() {
   content: "";
   position: absolute;
