--- a/less/blocks/checkbox.less
+++ b/less/blocks/checkbox.less
@@ -7,3 +7,31 @@
   color: #000000;
   text-transform: none;
 }
+
+@media (min-width: @tablet-width) {
+  .checkbox {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    padding: 30px 0;
+  }
+
+  .checkbox__wrapper {
+    width: 230px;
+    padding-left: 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .checkbox {
+    justify-content: space-between;
+    margin-bottom: 50px;
+    padding: 0;
+  }
+
+  .checkbox__wrapper {
+    width: auto;
+    padding-left: 0;
+  }
+}
