--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -12,5 +12,35 @@
   padding: 0 20px 20px;
   font: normal 14px/24px @font-family;
   text-align: center;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid @gray;
+}
+
+@media (min-width: @tablet-width) {
+  .feedback {
+    padding: 75px 60px 62px;
+  }
+
+  .feedback__title {
+    margin-bottom: 30px;
+    padding: 0;
+    font: bold 30px/30px @font-family;
+  }
+
+  .feedback__description {
+    margin-bottom: 70px;
+    padding: 0 103px;
+    border-bottom: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .feedback {
+    padding: 100px 120px 66px;
+    background: #ffffff;
+  }
+
+  .feedback__description {
+    margin-bottom: 60px;
+    padding: 0 257px;
+  }
 }
