--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -7,7 +7,7 @@
 
 .form__item {
   padding: 20px 20px 5px;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid @gray;
 }
 
 .form__button {
@@ -18,6 +18,56 @@
   font: bold 21px/26px @font-family;
   text-transform: uppercase;
   color: #ffffff;
-  background: #81b3d2;
+  background: @blue;
   border: none;
+}
+
+@media (min-width: @tablet-width) {
+  .form {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .form__title {
+    margin-bottom: 30px;
+    font: bold 21px/26px @font-family;
+  }
+
+  .form__title--checkbox {
+    padding: 0 170px;
+  }
+
+  .form__title--user-information,
+  .form__title--radio {
+    text-align: left;
+  }
+
+  .form__item {
+    padding: 0;
+    border: none;
+  }
+
+  .form__button {
+    width: 50%;
+    margin: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__title--radio {
+    padding-left: 80px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__title--contacts {
+    width: 100%;
+    padding: 0 280px;
+  }
+
+  .form__title--checkbox {
+    width: 100%;
+    margin-bottom: 35px;
+    padding: 0 300px;
+  }
 }
