--- a/less/blocks/hotel-search.less
+++ b/less/blocks/hotel-search.less
@@ -1,5 +1,6 @@
 .hotel-search {
   text-align: center;
+  background: #ffffff;
 }
 
 .hotel-search__title {
@@ -18,5 +19,38 @@
   padding: 16px 10px;
   font: bold 21px/26px @font-family;
   color: #ffffff;
-  background: #81b3d2;//для наглядности, потом убрать, когда будут стили для кнопок
+}
+
+@media (min-width: @tablet-width) {
+  .hotel-search {
+    padding-top: 50px;
+  }
+
+  .hotel-search__title {
+    margin: 0;
+    margin-bottom: 30px;
+    padding: 0;
+    font: bold 30px/30px @font-family;
+  }
+
+  .hotel-search__description {
+    padding: 0 155px;
+    margin: 0;
+    margin-bottom: 45px;
+  }
+
+  .hotel-search__button {
+    width: 458px;
+    margin: 0 auto 60px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .hotel-search__description {
+    padding: 0 371px;
+  }
+
+  .hotel-search__button {
+    margin: 0 auto 65px;
+  }
 }
