--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -1,22 +1,42 @@
 .intro {
-  height: 390px; //для сетки
-  padding: 90px 20px;
+  height: 390px;
+  padding-top: 90px;
   background:
     url("../img/bg-intro-triangle-mobile.svg") no-repeat bottom,
-    #81b3d2 url("../img/bg-back-mobile@1x.jpg") no-repeat bottom;
+    @blue url("../img/bg-back-mobile@1x.jpg") no-repeat bottom;
   background-size: auto 100%;
 }
 
 .intro--mini {
-  height: 160px; //для сетки
-  padding: 50px 20px 70px;
+  height: 160px;
+  padding-top: 52px;
   background:
     url("../img/bg-intro-triangle-mobile.svg") no-repeat bottom,
-    #81b3d2 url("../img/bg-back-mobile@1x.jpg") no-repeat bottom;
+    @blue url("../img/bg-back-mobile@1x.jpg") no-repeat bottom;
   background-size: auto 245%;
 }
 
 .intro__title {
   display: block;
   margin: 0 auto;
+}
+
+@media (min-width: @tablet-width) {
+  .intro {
+    height: 518px;
+    background: @blue;
+  }
+
+  .intro--mini {
+    height: 290px;
+    padding-top: 95px;
+    background: @blue;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .intro--mini {
+    height: 300px;
+    padding-top: 102px;
+  }
 }
