--- a/less/blocks/media.less
+++ b/less/blocks/media.less
@@ -1,5 +1,6 @@
 .media {
   padding: 40px 0;
+  background: #ffffff;
 }
 
 .media__title {
@@ -12,5 +13,37 @@
   font: normal 14px/24px @font-family;
   text-align: center;
   padding: 0 20px 30px;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid @gray;
+}
+
+@media (min-width: @tablet-width) {
+  .media {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 70px 60px 40px;
+  }
+
+  .media__title {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 0;
+    font: bold 30px/30px @font-family;
+  }
+
+  .media__description {
+    width: 100%;
+    margin-bottom: 70px;
+    padding: 0 105px;
+    border: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .media {
+    padding: 100px 0 85px;
+  }
+
+  .media__description {
+    padding: 0 380px;
+  }
 }
