--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -1,7 +1,6 @@
 .page-footer {
-  width: 320px;
-  margin: 0 auto;
   text-align: center;
+  background: #ffffff;
 }
 
 .page-footer__visitsedona {
@@ -15,4 +14,25 @@
 
 .page-footer__copyright {
   padding: 40px 20px 25px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer {
+    display: flex;
+    padding: 36px 0;
+  }
+
+  .page-footer__visitsedona,
+  .page-footer__social,
+  .page-footer__copyright {
+    width: 33.3%;
+  }
+
+  .page-footer__visitsedona {
+    padding: 0;
+  }
+
+  .page-footer__copyright {
+    padding: 0;
+  }
 }
