--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,19 +1,11 @@
 .page-header {
-  // position: relative;
-  display: flex;
-  flex-direction: column;
-  width: 320px;
-  margin: 0 auto;
+  position: relative;
   text-align: center;
 }
 
 .page-header__wrapper {
   position: relative;
-  padding: 28px 20px;
-}
-
-.page-header__nav {
-  // order: 1;
+  min-height: 56px;
 }
 
 .page-header__logo {
@@ -31,4 +23,22 @@
   z-index: 3;
   width: 23px;
   height: 23px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-header__wrapper {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: 2;
+  }
+
+  .page-header__logo {
+    position: static;
+  }
+
+  .page-header__toggle {
+    display: none;
+  }
 }
