--- a/less/style.less
+++ b/less/style.less
@@ -3,14 +3,13 @@
 @import "scaffolding.less";
 @import "blocks/page-header.less";
 @import "blocks/site-list.less";
-@import "blocks/intro.less";
-@import "blocks/page-main.less";
-@import "blocks/reasons.less";
-@import "blocks/recommendations.less";
-@import "blocks/hotel-search.less";
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
 @import "blocks/copyright.less";
+@import "blocks/intro.less";
+@import "blocks/reasons.less";
+@import "blocks/recommendations.less";
+@import "blocks/hotel-search.less";
 @import "blocks/feedback.less";
 @import "blocks/form.less";
 @import "blocks/user-information.less";
@@ -21,3 +20,5 @@
 @import "blocks/media.less";
 @import "blocks/photo.less";
 @import "blocks/video.less";
+@import "blocks/modal.less";
+@import "blocks/button.less";
