--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -1,15 +1,15 @@
 .feedback {
-  padding: 40px 0;
+  padding: 38px 0 43px;
 }
 
 .feedback__title {
-  margin-bottom: 30px;
+  margin-bottom: 26px;
   padding: 0 20px;
   text-align: center;
 }
 
 .feedback__description {
-  padding: 0 20px 20px;
+  padding: 0 20px 17px;
   font: normal 14px/24px @font-family;
   text-align: center;
   border-bottom: 1px solid @gray;
@@ -17,17 +17,17 @@
 
 @media (min-width: @tablet-width) {
   .feedback {
-    padding: 75px 60px 62px;
+    padding: 72px 60px 61px;
   }
 
   .feedback__title {
-    margin-bottom: 30px;
+    margin-bottom: 29px;
     padding: 0;
     font: bold 30px/30px @font-family;
   }
 
   .feedback__description {
-    margin-bottom: 70px;
+    margin-bottom: 76px;
     padding: 0 103px;
     border-bottom: none;
   }
@@ -35,12 +35,12 @@
 
 @media (min-width: @desktop-width) {
   .feedback {
-    padding: 100px 120px 66px;
+    padding: 109px 120px 66px;
     background: #ffffff;
   }
 
   .feedback__description {
-    margin-bottom: 60px;
+    margin-bottom: 61px;
     padding: 0 257px;
   }
 }
