--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -1,4 +1,24 @@
 .social__list {
   display: flex;
   justify-content: center;
+  padding-left: 3px;
+}
+
+.social__item {
+  margin-right: 6px;
+}
+
+.social__link {
+  width: 46px;
+  height: 48px;
+}
+
+.social__link--facebook {
+  width: 47px;
+}
+
+@media (min-width: @tablet-width) {
+  .social__list {
+    padding-left: 7px;
+  }
 }
