--- a/less/blocks/user-information.less
+++ b/less/blocks/user-information.less
@@ -1,3 +1,7 @@
+.user-information {
+  padding: 18px 20px 24px;
+}
+
 .user-information__wrapper {
   display: flex;
   align-items: center;
@@ -21,7 +25,8 @@
 @media (min-width: @tablet-width) {
   .user-information {
     width: 324px;
-    padding-left: 60px;
+    padding: 0;
+    padding-left: 58px;
   }
 }
 
