--- a/less/style.less
+++ b/less/style.less
@@ -13,6 +13,7 @@
 @import "blocks/feedback.less";
 @import "blocks/form.less";
 @import "blocks/user-information.less";
+@import "blocks/placeholder-style.less";
 @import "blocks/contacts.less";
 @import "blocks/radio.less";
 @import "blocks/checkbox.less";
@@ -20,5 +21,6 @@
 @import "blocks/media.less";
 @import "blocks/photo.less";
 @import "blocks/video.less";
-@import "blocks/modal.less";
+@import "blocks/modal-failure.less";
+@import "blocks/modal-success.less";
 @import "blocks/button.less";
