--- a/less/blocks/checkbox.less
+++ b/less/blocks/checkbox.less
@@ -1,37 +1,115 @@
+.checkbox {
+  display: flex;
+  flex-direction: column;
+  padding: 18px 20px 2px;
+}
+
 .checkbox__wrapper {
-  height: 56px;//временно, потом удалить
+  margin-bottom: 24px;
 }
 
 .checkbox__label {
+  position: relative;
+  display: block;
+  padding: 15px 0 15px 78px;
   font: bold 18px/26px @font-family;
   color: #000000;
   text-transform: none;
 }
 
+.checkbox__label::before {
+  .pseudo-element();
+  width: 56px;
+  height: 56px;
+  top: 1px;
+  left: -1px;
+  background: @light-gray;
+  border-radius: 10%;
+}
+
+.checkbox__input:checked + .checkbox__label::after {
+  .pseudo-element();
+  width: 22px;
+  height: 14px;
+  top: 18px;
+  left: 17px;
+  border-left: 4px solid #231f20;
+  border-bottom: 4px solid #231f20;
+  transform: rotate(-45deg);
+}
+
 @media (min-width: @tablet-width) {
   .checkbox {
-    display: flex;
+    flex-direction: row;
+    position: relative;
+    z-index: 1;
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
-    padding: 30px 0;
+    padding: 0;
+    padding-top: 28px;
+    margin-bottom: 69px;
+
+    &::before {
+      .pseudo-element();
+      top: 53px;
+      z-index: 1;
+      width: 100%;
+      height: 1px;
+      background: #dbdbdb;
+    }
   }
 
   .checkbox__wrapper {
-    width: 230px;
+    width: 258px;
     padding-left: 30px;
+    margin-bottom: 0;
+  }
+
+  .checkbox__wrapper:nth-of-type(2) {
+    order: 2;
+  }
+
+  .checkbox__wrapper:nth-of-type(3) {
+    order: 1;
+  }
+
+  .checkbox__wrapper:nth-of-type(4) {
+    order: 3;
+  }
+
+  .checkbox__label {
+    padding: 15px 0 15px 80px;
+  }
+
+  .checkbox__label[for="bridge"],
+  .checkbox__label[for="mountain"] {
+    margin-bottom: 32px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .checkbox {
     justify-content: space-between;
-    margin-bottom: 50px;
-    padding: 0;
+    margin-bottom: 67px;
   }
 
   .checkbox__wrapper {
-    width: auto;
+    display: flex;
+    width: 205px;
     padding-left: 0;
+  }
+
+  .checkbox__wrapper:nth-of-type(2) {
+    padding-left: 15px;
+  }
+
+  .checkbox__wrapper:nth-of-type(3) {
+    padding-left: 9px;
+  }
+
+  .checkbox__label[for="bridge"],
+  .checkbox__label[for="mountain"] {
+    margin-bottom: 0;
   }
 }
