--- a/less/blocks/copyright.less
+++ b/less/blocks/copyright.less
@@ -1,4 +1,35 @@
+.copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .copyright__text {
+  margin-right: 12px;
   font: normal 14px/26px @font-family;
   color: #000000;
+}
+
+.copyright__link {
+  display: block;
+  width: 27px;
+  height: 34px;
+  outline: 1px solid red;
+}
+
+@media (min-width: @tablet-width) {
+  .copyright {
+    padding-left: 10px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .copyright {
+    padding-left: 0;
+    padding-right: 42px;
+  }
+
+  .copyright__text {
+    margin-left: auto;
+  }
 }
