--- a/less/blocks/hotel-search.less
+++ b/less/blocks/hotel-search.less
@@ -1,21 +1,29 @@
 .hotel-search {
+  padding-top: 27px;
   text-align: center;
   background: #ffffff;
 }
 
 .hotel-search__title {
-  margin: 0 20px;
-  padding: 25px 0 20px;
+  margin-bottom: 19px;
+  padding: 0 20px;
   font: bold 21px/26px @font-family;
 }
 
 .hotel-search__description {
-  margin: 0 20px 35px;
+  margin-bottom: 35px;
+  padding: 0 20px;
+  font: normal 14px/24px @font-family;
+}
+
+.hotel-search__description br {
+  display: none;
 }
 
 .hotel-search__button {
   display: block;
-  margin: 0 20px 50px;
+  width: 280px;
+  margin: 0 auto 49px;
   padding: 16px 10px;
   font: bold 21px/26px @font-family;
   color: #ffffff;
@@ -23,7 +31,7 @@
 
 @media (min-width: @tablet-width) {
   .hotel-search {
-    padding-top: 50px;
+    padding-top: 53px;
   }
 
   .hotel-search__title {
@@ -34,19 +42,28 @@
   }
 
   .hotel-search__description {
-    padding: 0 155px;
     margin: 0;
-    margin-bottom: 45px;
+    margin-bottom: 41px;
+    padding: 0 155px;
+  }
+
+  .hotel-search__description br {
+    display: inline;
   }
 
   .hotel-search__button {
     width: 458px;
-    margin: 0 auto 60px;
+    margin: 0 auto 58px;
+  }
+
+  .hotel-search__map {
+    height: 350px;//под картой какой-то отступ...
   }
 }
 
 @media (min-width: @desktop-width) {
   .hotel-search__description {
+    margin-bottom: 46px;
     padding: 0 371px;
   }
 
