--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -1,19 +1,19 @@
 .intro {
-  height: 390px;
+  height: 389px;
   padding-top: 90px;
   background:
-    url("../img/bg-intro-triangle-mobile.svg") no-repeat bottom,
+    url("../img/bg-intro-triangle-mobile.svg") no-repeat 49.8% 100%,
     @blue url("../img/bg-back-mobile@1x.jpg") no-repeat bottom;
   background-size: auto 100%;
 }
 
 .intro--mini {
-  height: 160px;
+  height: 158px;
   padding-top: 52px;
   background:
-    url("../img/bg-intro-triangle-mobile.svg") no-repeat bottom,
+    url("../img/bg-intro-triangle-mobile.svg") no-repeat 49.8% 100%,
     @blue url("../img/bg-back-mobile@1x.jpg") no-repeat bottom;
-  background-size: auto 245%;
+  background-size: auto 246.2%;
 }
 
 .intro__title {
@@ -24,6 +24,7 @@
 @media (min-width: @tablet-width) {
   .intro {
     height: 518px;
+    padding-top: 77px;
     background: @blue;
   }
 
@@ -36,7 +37,7 @@
 
 @media (min-width: @desktop-width) {
   .intro--mini {
-    height: 300px;
+    height: 301px;
     padding-top: 102px;
   }
 }
