--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -1,10 +1,12 @@
 .page-footer {
+  padding: 30px 20px 20px;
   text-align: center;
   background: #ffffff;
 }
 
 .page-footer__visitsedona {
-  padding: 35px 20px;
+  margin-bottom: 36px;
+  padding-right: 5px;
 }
 
 .page-footer__link {
@@ -19,6 +21,7 @@
 @media (min-width: @tablet-width) {
   .page-footer {
     display: flex;
+    align-items: center;
     padding: 36px 0;
   }
 
@@ -29,7 +32,8 @@
   }
 
   .page-footer__visitsedona {
-    padding: 0;
+  margin-bottom: 0;
+  padding-right: 0;
   }
 
   .page-footer__copyright {
