--- a/less/blocks/reasons.less
+++ b/less/blocks/reasons.less
@@ -6,13 +6,15 @@
 
 .reasons__slogan {
   display: block;
-  margin-bottom: 35px;
+  margin-bottom: 27px;
+  padding: 0 30px;
   font: bold 18px/26px @font-family;
   color: #000000;
 }
 
 .reasons__header {
-  padding-bottom: 50px;//не маргин!
+  padding: 0 30px;
+  padding-bottom: 42px;//не маргин!
   font: normal 14px/26px @font-family;
   color: #333333;
   background: @blue url("../img/bg-triangle.svg") no-repeat bottom;
@@ -20,45 +22,68 @@
 }
 
 .reasons__item {
-  padding: 40px 25px 25px;
+  position: relative;
+  padding: 27px 35px 13px 35px;
   background: #eeeeee;
-  border-bottom: 1px solid #d6d6d6;
 }
 
-.reasons__item:last-child {
-  border-bottom: none;
+.reasons__item--town {
+  padding: 40px 25px 25px;
 }
 
-.reasons__item--white {
+.reasons__item--bridge {
+  padding: 40px 25px 23px 25px;
+}
+
+.reasons__item--town,
+.reasons__item--bridge {
   background: @blue;
-  border-bottom: none;
+}
+
+.reasons__item--town h3,
+.reasons__item--town p,
+.reasons__item--bridge h3,
+.reasons__item--bridge p {
+  color: #ffffff;
+}
+
+.reasons__item:not(:last-of-type)::before {
+  .pseudo-element();
+  bottom: 0;
+  left: 20px;
+  width: 280px;
+  height: 1px;
+  background: #d6d6d6;
 }
 
 .reasons__title {
-  margin-bottom: 15px;
+  margin-bottom: 9px;
   font: bold 18px/26px @font-family;
   color: #000000;
 }
 
-.reasons__title--white,
-.reasons__description--white {
-  color: white;
-}
-
-.reasons__image {
-  display: block;
-  width: 320px;//потом удалить
-  height: 190px;//потом удалить
+.reasons__title br {
+  display: none;
 }
 
 .reasons__description {
   margin-bottom: 15px;
 }
 
+.reasons__image {
+  display: block;
+  width: 320px;//потом убрать
+  height: 260px;//потом убрать
+}
+
 @media (min-width: @tablet-width) {
+  .reasons {
+    padding-top: 50px;
+  }
+
   .reasons__slogan {
     margin: 0;
-    margin-bottom: 35px;
+    margin-bottom: 28px;
     padding: 0 135px;
     font: bold 21px/26px @font-family;
     color: #000000;
@@ -75,30 +100,42 @@
     padding: 0;
   }
 
-  .reasons__wrapper--reverse {
-    flex-direction: row-reverse;
+  .reasons__item--bridge {
+    order: 1;
   }
 
   .reasons__item {
     flex-grow: 1;
     width: 33.3%;
-    padding: 40px;
+    padding: 45px 44px 23px;
     border-bottom: none;
+  }
+
+  .reasons__item:nth-of-type(2) {
+    padding: 45px 55px 23px;
   }
 
   .reasons__title {
     margin-bottom: 10px;
-    padding: 0 10px;
+    padding: 0 5px;
     font: bold 21px/26px @font-family;
   }
 
+  .reasons__title br {
+    display: inline;
+  }
+
   .reasons__description {
-    margin-bottom: 15px;
+    margin-bottom: 21px;
   }
 
   .reasons__image {
     width: 66.7%;//потом удалить
     height: 256px;//потом удалить
+  }
+
+  .reasons__item:not(:last-of-type)::before {
+    content: none;
   }
 }
 
@@ -108,10 +145,26 @@
   }
 
   .reasons__item {
-    padding: 40px 60px;
+    padding: 45px 55px 44px;
+  }
+
+  .reasons__item--town {
+    padding: 52px 60px 37px;
+  }
+
+  .reasons__item--bridge {
+    padding: 52px 82px 37px;
+  }
+
+  .reasons__item:nth-of-type(2) {
+    padding: 45px 61px 44px;
   }
 
   .reasons__title {
-    padding: 0 60px;
+    padding: 0 40px;
+  }
+
+  .reasons__title--width {
+    padding: 0 70px;
   }
 }
