--- a/less/blocks/recommendations.less
+++ b/less/blocks/recommendations.less
@@ -1,38 +1,44 @@
 .recommendations {
-  padding: 0 20px 35px;
+  padding: 35px 20px 9px;
   text-align: left;
 }
 
 .recommendations__title {
   position: relative;
-  padding: 35px 0 25px 50px;
+  margin-bottom: 14px;
+  padding-left: 50px;
   font: bold 18px/26px @font-family;
   color: #000000;
 
   &::before {
     .pseudo-element();
-    left: 0;
-    top: 30px;
-    width: 38px;
-    height: 37px;
-    border: 1px solid red;//для наглядности, потом убрать
+    left: -2px;
+    top: -12px;
+    width: 43px;
+    height: 43px;
+    border: 1px solid red;//потом убрать
   }
 }
 
 .recommendations__description {
+  margin-bottom: 28px;
   padding-left: 50px;
+}
+
+.recommendations__description br {
+  display: none;
 }
 
 @media (min-width: @tablet-width) {
   .recommendations {
     display: flex;
-    padding: 55px 0 60px;
+    padding: 56px 0 33px;
     text-align: center;
   }
 
   .recommendations__item {
     width: 33.3%;
-    padding: 0 48px;
+    padding: 0 50px;
   }
 
   .recommendations__item--souvenirs {
@@ -41,9 +47,9 @@
   }
 
   .recommendations__title {
-    margin-bottom: 20px;
-    padding: 0;
-    padding-top: 95px;
+    margin-bottom: 21px;
+    padding-left: 0;
+    padding-top: 103px;
     font: bold 21px/26px @font-family;
   }
 
@@ -51,18 +57,25 @@
     top: 0;
     left: 50%;
     transform: translate(-50%, 0);
-    width: 77px;
-    height: 75px;
+    width: 78px;
+    height: 76px;
   }
 
   .recommendations__description {
     padding: 0;
   }
+
+  .recommendations__description br {
+    display: inline;
+  }
 }
 
 @media (min-width: @desktop-width) {
-  .recommendations__item--souvenirs {
-    order: 1;
-    padding: 0 93px;
+  .recommendations {
+    padding: 56px 0 54px;
   }
+
+  // .recommendations__item--souvenirs {
+  //   padding: 0 90px;
+  // }
 }
