--- a/less/blocks/site-list.less
+++ b/less/blocks/site-list.less
@@ -2,9 +2,23 @@
   background: @blue;
 }
 
+.site-list__item {
+  box-shadow: inset 0 -1px 0 0 rgba(1, 1, 1, 0.2),
+    inset 0 1px 0 0 rgba(255, 255, 255, 0.2);
+
+  &:first-child {
+    box-shadow: inset 0 -1px 0 0 rgba(1, 1, 1, 0.2);
+  }
+
+  &:last-child {
+    box-shadow: inset 0 -3px 8px -2px rgba(1, 1, 1, 0.3),
+      inset 0 1px 0 0 rgba(255, 255, 255, 0.2);
+  }
+}
+
 .site-list__link {
   display: block;
-  padding: 10px 20px;
+  padding: 8px 20px;
   font: bold 18px/40px @font-family;
   color: #ffffff;
 
@@ -25,7 +39,13 @@
   }
 
   .site-list__item {
-    width: 153px;
+    width: 20%;
+    box-shadow: none;
+
+    &:first-child,
+    &:last-child {
+      box-shadow: none;
+    }
   }
 
   .site-list__item:nth-child(2) {
@@ -34,8 +54,12 @@
 
   .site-list__link {
     font: bold 14px/26px @font-family;
-    padding: 15px 10px;
+    padding: 14px 10px 16px;
     color: #000000;
+  }
+
+  .site-list__item:nth-child(3) .site-list__link {
+    padding: 14px 8px 16px 16px;
   }
 
   .site-list__link:hover {
@@ -62,7 +86,7 @@
 }
 
 @media (min-width: @desktop-width) {
-  .site-list__item {
-    width: 239px;
+  .site-list__item:nth-child(3) .site-list__link {
+    padding: 14px 10px 16px 12px;
   }
 }
