--- a/less/blocks/textarea.less
+++ b/less/blocks/textarea.less
@@ -1,11 +1,11 @@
 .textarea {
+  padding: 18px 20px 45px;
   border-bottom: none;
-  margin-bottom: 45px;
 }
 
 .textarea__input {
   width: 100%;
-  padding: 15px 22px;
+  padding: 16px 20px 14px;
   font: bold 18px/26px @font-family;
   color: #000000;
   background: @light-gray;
@@ -14,6 +14,23 @@
 
 @media (min-width: @tablet-width) {
   .textarea {
+    position: relative;
+    z-index: 1;
     width: 100%;
+    margin-bottom: 52px;
+    padding: 0;
+
+    &::before {
+      .pseudo-element();
+      top: 12px;
+      z-index: 1;
+      width: 100%;
+      height: 1px;
+      background: #dbdbdb;
+    }
+  }
+
+  .textarea__input {
+    padding: 16px 21px 14px;
   }
 }
