--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -1,23 +1,25 @@
 .video {
   position: relative;
-  padding-top: 35px;
+  padding-top: 33px;
 }
 
 .video__title {
-  margin-bottom: 35px;
+  margin-bottom: 26px;
   font: bold 18px/26px @font-family;
   text-align: center;
   color: #000000;
 }
 
 .video__description {
-  margin-bottom: 40px;
+  margin-bottom: 34px;
+  padding: 0 25px;
   font: normal 14px/24px @font-family;
   text-align: center;
 }
 
 .video__file {
-  width: 100%;
+  width: 100%;//потом убрать
+  height: 201px;//потом убрать
   border: 1px solid red;//потом убрать
 }
 
@@ -26,8 +28,9 @@
   display: flex;
   flex-wrap: wrap;
   width: 280px;
+  height: 66px;
   margin: 0 auto;
-  margin-top: -7px;//без него блок слегка ниже... не смогла понять почему
+  margin-top: -5px;//без него блок слегка ниже... не смогла понять почему
   background: @light-gray;
 }
 
@@ -36,6 +39,7 @@
   bottom: 100%;
   width: 100%;
   height: 45px;
+  border: none;
   background: rgba(102, 102, 102, 0.6);
 }
 
@@ -50,17 +54,21 @@
 
 @media (min-width: @tablet-width) {
   .video {
-    padding-top: 60px;
+    padding-top: 63px;
   }
 
   .video__title {
-    margin-bottom: 20px;
+    margin-bottom: 29px;
     font: bold 30px/30px @font-family;
   }
 
   .video__description {
-    margin-bottom: 65px;
+    margin-bottom: 73px;
     padding: 0 115px;
+  }
+
+  .video__file {
+    height: 499px;//потом убрать
   }
 
   .video__wrapper {
@@ -91,11 +99,17 @@
   .video {
     width: 800px;
     margin: 0 auto;
+    padding-top: 68px;
   }
 
   .video__file {
     height: 500px;
     margin: 0 auto;
+  }
+
+  .video__description {
+    margin-bottom: 71px;
+    padding: 0 180px;
   }
 
   .video__toddler {
