--- a/less/blocks/placeholder-style.less
+++ b/less/blocks/placeholder-style.less
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 ::-webkit-input-placeholder {color: #000000;}
 ::-moz-placeholder {color: #000000;}
 :-moz-placeholder {color: #000000;}
