Подготовка адаптивной графики в личном проекте

--- a/less/blocks/hotel-search.less
+++ b/less/blocks/hotel-search.less
@@ -59,6 +59,10 @@
   .hotel-search__map {
     height: 350px;//под картой какой-то отступ...
   }
+
+  .hotel-search__map img {
+    width: 768px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -69,5 +73,9 @@
 
   .hotel-search__button {
     margin: 0 auto 65px;
+  }
+
+  .hotel-search__map img {
+    width: 1200px;
   }
 }
