--- a/less/blocks/photo.less
+++ b/less/blocks/photo.less
@@ -9,8 +9,6 @@
 
 .photo__image {
   display: block;
-  width: 280px;//потом убрать
-  height: 280px;//потом убрать
   margin: 0 auto 15px;
 }
 
@@ -54,13 +52,14 @@
   }
 
   .photo__image {
-    width: 100%;//потом убрать
-    height: 267px;//потом убрать
+    width: 324px;
+    height: 267px;
     margin: 0;
   }
 
   .photo__image--first {
-    height: 400px;//потом убрать
+    width: 648px;
+    height: 400px;
   }
 
   .photo__figure {
@@ -103,6 +102,17 @@
     width: 33.3%;
   }
 
+  .photo__image {
+    width: 400px;
+    height: 267px;
+    margin: 0;
+  }
+
+  .photo__image--first {
+    width: 1200px;
+    height: 400px;
+  }
+
   .photo__figure {
     position: relative;
   }
@@ -112,11 +122,11 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(178, 178, 178, 0.3);
+    background: rgba(0, 0, 0, 0.3);
   }
 
   .photo:nth-of-type(2n+3) .photo__caption {
-    background: rgba(178, 178, 178, 0.3);
+    background: rgba(0, 0, 0, 0.3);
   }
 
   .photo__name,
