--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -18,9 +18,7 @@
 }
 
 .video__file {
-  width: 100%;//потом убрать
-  height: 201px;//потом убрать
-  border: 1px solid red;//потом убрать
+  width: 100%;
 }
 
 .video__wrapper {
@@ -30,7 +28,7 @@
   width: 280px;
   height: 66px;
   margin: 0 auto;
-  margin-top: -5px;//без него блок слегка ниже... не смогла понять почему
+  margin-top: -5px;
   background: @light-gray;
 }
 
@@ -40,7 +38,7 @@
   width: 100%;
   height: 45px;
   border: none;
-  background: rgba(102, 102, 102, 0.6);
+  background: rgba(0, 0, 0, 0.6);
 }
 
 .video__repeat-play {
@@ -67,18 +65,19 @@
     padding: 0 115px;
   }
 
-  .video__file {
-    height: 499px;//потом убрать
+  .video__image {
+    width: 648px;
+    height: 499px;
   }
 
   .video__wrapper {
     position: absolute;
-    bottom: 6px;//??? не понимаю
+    bottom: 6px;
     flex-wrap: nowrap;
     align-items: center;
     width: 100%;
     height: 93px;
-    background: rgba(102, 102, 102, 0.6);
+    background: rgba(0, 0, 0, 0.6);
   }
 
   .video__toddler {
@@ -102,9 +101,9 @@
     padding-top: 68px;
   }
 
-  .video__file {
+  .video__image {
+    width: 800px;
     height: 500px;
-    margin: 0 auto;
   }
 
   .video__description {
