--- a/less/reset.less
+++ b/less/reset.less
@@ -43,7 +43,7 @@ html {
 */
 img,
 object,
-embed {max-width: 100%;}
+embed {max-width: 100%; height: auto;}
 
 /*
    Note: keeping IMG here will cause problems if you're using foreground images as sprites.
