--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -5,14 +5,16 @@
     url("../img/bg-intro-triangle-mobile.svg") no-repeat 49.8% 100%,
     @blue url("../img/bg-back-mobile@1x.jpg") no-repeat bottom;
   background-size: auto 100%;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+    background-size: 1536px auto;
+  }
 }
 
 .intro--mini {
   height: 158px;
   padding-top: 52px;
-  background:
-    url("../img/bg-intro-triangle-mobile.svg") no-repeat 49.8% 100%,
-    @blue url("../img/bg-back-mobile@1x.jpg") no-repeat bottom;
   background-size: auto 246.2%;
 }
 
@@ -25,19 +27,54 @@
   .intro {
     height: 518px;
     padding-top: 77px;
-    background: @blue;
+    background:
+      url("../img/bg-intro-triangle-tablet.svg") no-repeat 49.8% 100%,
+      @blue url("../img/bg-back-tablet@1x.jpg") no-repeat bottom;
+    background-size: auto;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+      background-size: 1536px auto;
+    }
+  }
+
+  .intro__title {
+    width: 460px;
+    height: 350px;
   }
 
   .intro--mini {
     height: 290px;
     padding-top: 95px;
-    background: @blue;
+  }
+
+  .intro--mini .intro__title {
+    width: 458px;
+    height: 78px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .intro {
+    padding-top: 78px;
+    background:
+      url("../img/bg-intro-triangle-desktop.svg") no-repeat 49.8% 100%,
+      @blue url("../img/bg-back-desktop@1x.jpg") no-repeat bottom;
+    background-size: auto;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+      background-size: 2400px auto;
+    }
+  }
+
   .intro--mini {
     height: 301px;
-    padding-top: 102px;
+    padding-top: 101px;
+  }
+
+  .intro--mini .intro__title {
+    width: 460px;
+    height: 79px;
   }
 }
