--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -86,3 +86,10 @@
     display: flex;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .page-header__logo-image {
+    width: 187px;
+    height: 96px;
+  }
+}
