--- a/less/var-mix.less
+++ b/less/var-mix.less
@@ -14,6 +14,10 @@
 
 @desktop-width: 1200px;
 
+@retina-dpi: 144dpi;
+
+@retina-dppx: 1.5dppx;
+
 .pseudo-element() {
   content: "";
   position: absolute;
