Оптимизировать векторную графику

--- a/less/blocks/copyright.less
+++ b/less/blocks/copyright.less
@@ -17,6 +17,10 @@
   outline: 1px solid red;
 }
 
+.copyright__link-icon {
+  fill: #000000;
+}
+
 @media (min-width: @tablet-width) {
   .copyright {
     padding-left: 10px;
