--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -13,8 +13,32 @@
   height: 48px;
 }
 
+.social__link--twitter {
+  padding-top: 17px;
+}
+
+.social__link--facebook {
+  padding-top: 15px;
+}
+
+.social__link--youtube {
+  padding-top: 17px;
+}
+
+.social__icon-twitter,
+.social__icon-facebook,
+.social__icon-youtube {
+  fill: #ffffff;
+}
+
 .social__link--facebook {
   width: 47px;
+}
+
+.social__link:active .social__icon-twitter,
+.social__link:active .social__icon-facebook,
+.social__link:active .social__icon-youtube {
+  opacity: 0.3;
 }
 
 @media (min-width: @tablet-width) {
