--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -22,6 +22,13 @@
   margin-bottom: 25px;
 }
 
+.contacts__icon-phone,
+.contacts__icon-mail {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+
 .contacts__label {
   align-self: flex-start;
   margin-bottom: 8px;
