--- a/less/blocks/copyright.less
+++ b/less/blocks/copyright.less
@@ -14,11 +14,16 @@
   display: block;
   width: 27px;
   height: 34px;
-  outline: 1px solid red;
 }
 
-.copyright__link-icon {
-  fill: #000000;
+.copyright__logo-htmlacademy {
+  &:hover {
+    fill: @blue;
+  }
+
+  &:active {
+    fill: #b2b2b2;
+  }
 }
 
 @media (min-width: @tablet-width) {
