Автоматизация сборки личного проекта

--- a/less/blocks/copyright.less
+++ b/less/blocks/copyright.less
@@ -34,11 +34,11 @@
 
 @media (min-width: @desktop-width) {
   .copyright {
-    padding-left: 0;
-    padding-right: 42px;
+    padding-left: 187px;
+    // padding-right: 42px;
   }
 
-  .copyright__text {
-    margin-left: auto;
-  }
+  // .copyright__text {
+  //   margin-left: auto;
+  // }
 }
