--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -51,8 +51,8 @@
 
 .page-header__nav--closed .page-header__toggle {
   &::before {
-    right: -1px;
     top: 8px;
+    right: -1px;
     width: 23px;
     background: @blue;
     transform: none;
@@ -76,6 +76,7 @@
 
   .page-header__logo {
     position: static;
+    transform: none;
   }
 
   .page-header__toggle {
