--- a/less/blocks/placeholder-style.less
+++ b/less/blocks/placeholder-style.less
@@ -3,3 +3,6 @@
 ::-moz-placeholder {color: #000000;}
 :-moz-placeholder {color: #000000;}
 :-ms-input-placeholder {color: #000000;}
+::-moz-placeholder, :-moz-placeholder {
+    opacity: 1;
+}
