--- a/less/blocks/reasons.less
+++ b/less/blocks/reasons.less
@@ -159,15 +159,15 @@
   }
 
   .reasons__title {
-    padding: 0 40px;
+    padding: 0 35px;
+  }
+
+  .reasons__item--bridge .reasons__title {
+    padding: 0;
   }
 
   .reasons__title--width {
     padding: 0 70px;
-  }
-
-  .reasons__wrapper {
-    align-items: center;
   }
 
   .reasons__picture {
