--- a/less/blocks/recommendations.less
+++ b/less/blocks/recommendations.less
@@ -56,12 +56,19 @@
 
   .recommendations__item {
     width: 33.3%;
-    padding: 0 50px;
+  }
+
+  .recommendations__item--house {
+    padding: 0 45px;
   }
 
   .recommendations__item--gift {
     order: 1;
     padding: 0 45px;
+  }
+
+  .recommendations__item--burger {
+    padding: 0 50px;
   }
 
   .recommendations__title {
