--- a/less/blocks/textarea.less
+++ b/less/blocks/textarea.less
@@ -5,6 +5,7 @@
 
 .textarea__input {
   width: 100%;
+  height: 160px;
   padding: 16px 20px 14px;
   font: bold 18px/26px @font-family;
   color: #000000;
