--- a/less/blocks/user-information.less
+++ b/less/blocks/user-information.less
@@ -19,7 +19,8 @@
 
 .user-information__input {
   .input-style();
-  padding: 16px 22px;
+  height: 58px;
+  padding: 16px 15px 16px 22px;
 }
 
 @media (min-width: @tablet-width) {
