--- a/less/blocks/checkbox.less
+++ b/less/blocks/checkbox.less
@@ -27,6 +27,18 @@
   border-radius: 10%;
 }
 
+.checkbox__label:hover::before {
+  background: @gray;
+}
+
+.checkbox__label:active::before {
+  background: #d5d5d5;
+}
+
+.checkbox__input:focus + .checkbox__label::before {
+    background: @gray;
+}
+
 .checkbox__input:checked + .checkbox__label::after {
   .pseudo-element();
   width: 22px;
@@ -36,6 +48,11 @@
   border-left: 4px solid #231f20;
   border-bottom: 4px solid #231f20;
   transform: rotate(-45deg);
+}
+
+.checkbox__input:checked + .checkbox__label:active::after {
+  border-left: 4px solid #a4a4a4;
+  border-bottom: 4px solid #a4a4a4;
 }
 
 @media (min-width: @tablet-width) {
