--- a/less/blocks/hotel-search.less
+++ b/less/blocks/hotel-search.less
@@ -29,6 +29,19 @@
   color: #ffffff;
 }
 
+.hotel-search__button-disabled {
+  background: @gray;
+
+  &:hover {
+    background: @gray;
+  }
+
+  &:active {
+    color: #ffffff;
+    background: @gray;
+  }
+}
+
 .hotel-search__map {
   position: relative;
   height: 350px;
