--- a/less/blocks/reasons.less
+++ b/less/blocks/reasons.less
@@ -27,7 +27,7 @@
   background: #eeeeee;
 }
 
-.reasons__item--town {
+.reasons__item--city {
   padding: 40px 25px 25px;
 }
 
@@ -35,19 +35,19 @@
   padding: 40px 25px 23px 25px;
 }
 
-.reasons__item--town,
+.reasons__item--city,
 .reasons__item--bridge {
   background: @blue;
 }
 
-.reasons__item--town h3,
-.reasons__item--town p,
+.reasons__item--city h3,
+.reasons__item--city p,
 .reasons__item--bridge h3,
 .reasons__item--bridge p {
   color: #ffffff;
 }
 
-.reasons__item:not(:last-of-type)::before {
+.reasons__item:not(:last-of-type):not(.reasons__item--city):not(.reasons__item--bridge)::before {
   .pseudo-element();
   bottom: 0;
   left: 20px;
@@ -70,8 +70,28 @@
   margin-bottom: 15px;
 }
 
-.reasons__image {
-  display: block;
+.reasons__background-city {
+  width: 100%;
+  height: 260px;
+  background: @blue url("../img/main-city-mobile@1x.jpg") no-repeat bottom;
+  background-size: auto 100%;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/main-city-mobile@2x.jpg");
+    background-size: 640px auto;
+  }
+}
+
+.reasons__background-bridge {
+  width: 100%;
+  height: 260px;
+  background: @blue url("../img/main-bridge-mobile@1x.jpg") no-repeat bottom;
+  background-size: auto 100%;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/main-bridge-mobile@2x.jpg");
+    background-size: 640px auto;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -127,13 +147,32 @@
     margin-bottom: 21px;
   }
 
-  .reasons__image {
-    width: 512px;
-    height: 256px;
+  .reasons__item:not(:last-of-type):not(.reasons__item--city):not(.reasons__item--bridge)::before {
+    content: none;
   }
 
-  .reasons__item:not(:last-of-type)::before {
-    content: none;
+  .reasons__background-city {
+    width: 512px;
+    height: auto;
+    background: @blue url("../img/main-city-tablet@1x.jpg") no-repeat bottom;
+    background-size: auto 100%;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/main-city-tablet@2x.jpg");
+      background-size: 1024px auto;
+    }
+  }
+
+  .reasons__background-bridge {
+    width: 512px;
+    height: auto;
+    background: @blue url("../img/main-bridge-tablet@1x.jpg") no-repeat bottom;
+    background-size: auto 100%;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/main-bridge-tablet@2x.jpg");
+      background-size: 1024px auto;
+    }
   }
 }
 
@@ -146,7 +185,7 @@
     padding: 45px 55px 44px;
   }
 
-  .reasons__item--town {
+  .reasons__item--city {
     padding: 52px 60px 37px;
   }
 
@@ -170,22 +209,27 @@
     padding: 0 70px;
   }
 
-  .reasons__picture {
+    .reasons__background-city {
     width: 800px;
-    height: 256px;
-    overflow: hidden;
+    height: auto;
+    background: @blue url("../img/main-city-desktop@1x.jpg") no-repeat  50% 49%;
+    background-size: cover;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/main-city-desktop@2x.jpg");
+      background-size: 1600px auto;
+    }
   }
 
-  .reasons__image {
+  .reasons__background-bridge {
     width: 800px;
-    height: 400px;
-  }
+    height: auto;
+    background: @blue url("../img/main-bridge-desktop@1x.jpg") no-repeat 50% 53%;
+    background-size: cover;
 
-  .reasons__image--town {
-    margin-top: -71px;
-  }
-
-  .reasons__image--bridge {
-    margin-top: -76px;
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/main-bridge-desktop@2x.jpg");
+      background-size: 1600px auto;
+    }
   }
 }
