--- a/less/blocks/user-information.less
+++ b/less/blocks/user-information.less
@@ -21,6 +21,15 @@
   .input-style();
   height: 58px;
   padding: 16px 15px 16px 22px;
+
+  &:hover {
+    background: @gray;
+  }
+
+  &:focus {
+    background: none;
+    outline: 4px solid @gray;
+  }
 }
 
 @media (min-width: @tablet-width) {
