--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -46,12 +46,14 @@
 
 .video__scale {
   position: relative;
+  display: block;
   height: 3px;
   background: rgba(255, 255, 255, 0.2);
 }
 
 .video__point {
   position: absolute;
+  display: block;
   top: -3px;
   left: 36px;
   width: 9px;
@@ -81,6 +83,18 @@
 .video__icon-subtitles,
 .video__icon-fullscreen {
   fill: #5c6870;
+}
+
+.video__icon-replay:hover,
+.video__icon-subtitles:hover,
+.video__icon-fullscreen:hover {
+  fill: #333333;
+}
+
+.video__icon-replay:active,
+.video__icon-subtitles:active,
+.video__icon-fullscreen:active {
+  fill: #c1c1c1;
 }
 
 @media (min-width: @tablet-width) {
