--- a/less/var-mix.less
+++ b/less/var-mix.less
@@ -28,6 +28,6 @@
   flex-grow: 1;
   font: bold 18px/26px @font-family;
   color: #000000;
-  background: #f2f2f2;
+  background: @light-gray;
   border: none;
 }
