Финальная проверка попытка №3

--- a/less/blocks/checkbox.less
+++ b/less/blocks/checkbox.less
@@ -36,7 +36,7 @@
 }
 
 .checkbox__input:focus + .checkbox__label::before {
-  background: @gray;
+  background: #d5d5d5;
 }
 
 .checkbox__input:checked + .checkbox__label::after {
