--- a/less/blocks/radio.less
+++ b/less/blocks/radio.less
@@ -34,7 +34,7 @@
 }
 
 .radio__input:focus + .radio__label::before {
-  background: @gray;
+  background: #d5d5d5;
 }
 
 .radio__input:checked + .radio__label::after {
